--- a/jts/wl-hello-client/pom.xml
+++ b/jts/wl-hello-client/pom.xml
@@ -16,54 +16,95 @@
     limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>org.jboss.narayana</groupId>
-   <artifactId>wl-hello-client</artifactId>
-   <version>1.0-SNAPSHOT</version>
+    <groupId>org.jboss.narayana</groupId>
+    <artifactId>wl-hello-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-   <packaging>jar</packaging>
-   <name>WL EJB Remote Client</name>
-   <description>WL Java client for remote EJB</description>
+    <packaging>jar</packaging>
+    <name>WL EJB Remote Client</name>
+    <description>WL Java client for remote EJB</description>
 
-   <properties>
-     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-     <version.jboss.spec.javaee.7.0>1.0.0.Final</version.jboss.spec.javaee.7.0>
-     <version.compiler.plugin>3.1</version.compiler.plugin>
-     <version.exec.plugin>1.2.1</version.exec.plugin>
-     <version.war.plugin>2.5</version.war.plugin>
-     <maven.compiler.target>1.7</maven.compiler.target>
-     <maven.compiler.source>1.7</maven.compiler.source>
-   </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.jboss.spec.javaee.7.0>1.0.0.Final</version.jboss.spec.javaee.7.0>
+        <version.compiler.plugin>3.1</version.compiler.plugin>
+        <version.exec.plugin>1.2.1</version.exec.plugin>
+        <version.war.plugin>2.5</version.war.plugin>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <version.jboss.bom.eap>7.0.0-build-9</version.jboss.bom.eap>
+        <version.jboss.spec.javaee.7.0>1.0.3.Final</version.jboss.spec.javaee.7.0>
+        <version.wildfly>10.0.0.Beta2</version.wildfly>
+        <version.jboss.spec.javaee.7.0>1.0.0.Final</version.jboss.spec.javaee.7.0>
+    </properties>
+    <repositories>
+        <repository>
+            <id>jboss-developer-staging-repository</id>
+            <url>http://jboss-developer.github.io/temp-maven-repo/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>redhat-ga-repository</id>
+            <url>https://maven.repository.redhat.com/earlyaccess/all/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.bom</groupId>
+                <artifactId>jboss-eap-javaee7</artifactId>
+                <version>${version.jboss.bom.eap}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-   <dependencies>
-      <dependency>
-        <groupId>org.jboss.quickstarts.eap</groupId>
-        <artifactId>jboss-jts-application-component-2</artifactId>
-        <version>7.0.0-SNAPSHOT</version>
-      </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.quickstarts.eap</groupId>
+            <artifactId>jboss-jts-application-component-2</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
+        </dependency>
 
-      <dependency>
-        <groupId>de.barmenia.test</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <artifactId>testejb-wls</artifactId>
-      </dependency>
 
-      <dependency>
-        <groupId>org.jboss.narayana</groupId>
-        <artifactId>hello</artifactId>
-        <version>1.0-SNAPSHOT</version>
-      </dependency>
+              <dependency>
+                <groupId>com.oracle.weblogic</groupId>
+                <artifactId>wlclient</artifactId>
+                <version>12.1.3-0-0</version>
+              </dependency>
 
-      <dependency>
-        <groupId>com.oracle.weblogic</groupId>
-<!--
-        <artifactId>wlfullclient</artifactId>
--->
-        <artifactId>wlclient</artifactId>
-        <version>12.1.3-0-0</version>
-      </dependency>
+
+        <!-- Import the EJB API, we use runtime scope because we aren't using
+            any direct reference to EJB spec API in our client code -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- Include the ejb client jars -->
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-ejb-client-bom</artifactId>
+            <type>pom</type>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -92,7 +133,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                  <mainClass>org.jboss.narayana.HelloClient</mainClass>
+                    <mainClass>org.jboss.narayana.HelloClient</mainClass>
                 </configuration>
             </plugin>
             <!-- build standalone exe jar -->
