--- a/jts/interop/pom.xml
+++ b/jts/interop/pom.xml
@@ -48,6 +48,17 @@
    </dependencyManagement>
 
    <dependencies>
+      <dependency>
+         <groupId>org.jboss.narayana</groupId>
+         <artifactId>dummy-resources</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.spec.javax.transaction</groupId>
+         <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+         <scope>provided</scope>
+      </dependency>
 
       <!-- Import the CDI API, we use provided scope as the API is included 
          in JBoss AS 7 -->
@@ -114,28 +125,28 @@
       </plugins>
    </build>
 
-  <profiles>
-    <profile>
-       <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
-       <!-- Use this profile for any OpenShift specific customization your app will need. -->
-       <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
-       <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-       <id>openshift</id>
-       <build>
-          <plugins>
-             <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                   <outputDirectory>deployments</outputDirectory>
-                   <warName>ROOT</warName>
-                   <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-                   <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-             </plugin>
-          </plugins>
-       </build>
-    </profile>
-  </profiles> 
+   <profiles>
+      <profile>
+         <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
+         <!-- Use this profile for any OpenShift specific customization your app will need. -->
+         <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
+         <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+         <id>openshift</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <artifactId>maven-war-plugin</artifactId>
+                  <version>2.1.1</version>
+                  <configuration>
+                     <outputDirectory>deployments</outputDirectory>
+                     <warName>ROOT</warName>
+                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
+                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
 </project>
 
