--- a/jts/interop/pom.xml
+++ b/jts/interop/pom.xml
@@ -53,6 +53,11 @@
          <artifactId>dummy-resources</artifactId>
          <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+         <groupId>org.jboss.narayana</groupId>
+         <artifactId>dummy-resource-recovery</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
 
       <dependency>
          <groupId>org.jboss.spec.javax.transaction</groupId>
