--- a/jts/interop/pom.xml
+++ b/jts/interop/pom.xml
@@ -53,12 +53,13 @@
          <artifactId>dummy-resources</artifactId>
          <version>1.0-SNAPSHOT</version>
       </dependency>
+<!--
       <dependency>
          <groupId>org.jboss.narayana</groupId>
          <artifactId>dummy-resource-recovery</artifactId>
          <version>1.0-SNAPSHOT</version>
       </dependency>
-
+-->
       <dependency>
          <groupId>org.jboss.spec.javax.transaction</groupId>
          <artifactId>jboss-transaction-api_1.1_spec</artifactId>
@@ -123,9 +124,21 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3.1</version>
             <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
+               <source>1.8</source>
+               <target>1.8</target>
             </configuration>
+         </plugin>
+         <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-source-plugin</artifactId>
+           <executions>
+             <execution>
+               <id>attach-sources</id>
+               <goals>
+                 <goal>jar</goal>
+               </goals>
+             </execution>
+           </executions>
          </plugin>
       </plugins>
    </build>
